apps/base/jellyfin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: jellyfin
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  parentRefs:
    - name: envoy
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - jellyfin.homelab
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jellyfin
          port: 8096
